    - bump version
  * debian/{desktop, dirs, rules}
    - install desktop file; thanks to Fabian Greffrath for the report and file;
      Closes: #521186

  [ Luca Bruno ]
  * bin/reportbug:
    - fix default when choosing for realname and email at configuration time
    - offer interface configuration on explicit configuration or when no
      interface is being specified

 -- Luca Bruno <lethalman88@gmail.com>  Wed, 25 Mar 2009 21:28:19 +0100

reportbug (4.0) unstable; urgency=low

  * Uploading to unstable, since Lenny has been released
  * reportbug/__init__.py
    - updated version number
  * conf/reportbug.conf, debian/rules
    - moved reportbug.conf to conf/ dir
  * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
    - moved files installed in /usr/share/... into share/ to clean up top level
      directory
  * reportbug/test_hiermatch.py, test/test_hiermatch.py
    - removed reportbug/test_hiermatch.py, partially merget into
      test/test_hiermatch.py
  * bin/*, reportbug/*, reportbug/ui/*, debian/copyright
    - updated copyright information, in particular adding me 
  * reportbug/urlutils.py
    - added a timeout of 1 minute for url retrieving; thanks to Michal Suchanek
      for the report; Closes: 516449
  * debian/{control, rules}
    - switch from python-central to python-support
  * debian/control
    - bump Standards-Version to 3.8.1 (no changes needed)
    - updated Vcs-* fields, we are now using Git
    - removed 'DM-Upload-Allowed' flag, we are all DDs now
  * bin/reportbug
    - clarified that '<host>:<port>' is the way to specify and alternative port;
      thanks to Apelete Seketeli for the report; Closes: #519452

 -- Sandro Tosi <morph@debian.org>  Tue, 24 Mar 2009 17:43:07 +0100

reportbug (3.99.1) experimental; urgency=low

  * reportbug/__init__.py
    - updated version number
  * reportbug/ui/{__init__.py,newt_ui.py}, test/test_reportbug_ui_newt.py
    - removed newt UI, since unused, broken, unmaintained