@@ -24,7 +24,6 @@
 
 try:
     import gtk
-    from gtk import gdk
     import gobject
 except ImportError:
     raise UINotImportable, 'Please install the python-gtk2 package to use this interface.'
@@ -32,7 +31,15 @@ except ImportError:
 try:
     import vte
 except ImportError:
-    raise UINotImportable, 'Please install the python-vte package to use this interface.'
+    message = "Please install the %s package to use the gtk2 interface."
+    dialog = gtk.MessageDialog (None, gtk.DIALOG_MODAL | gtk.DIALOG_DESTROY_WITH_PARENT,
+                                gtk.MESSAGE_INFO, gtk.BUTTONS_CLOSE, None)
+    dialog.set_markup (message % "<b>python-vte</b>")
+    dialog.run ()
+    dialog.destroy ()
+    while gtk.events_pending ():
+        gtk.main_iteration ()
+    raise UINotImportable, message % "python-vte"
 
 try:
     import gtkspell
@@ -40,7 +47,7 @@ try:
 except:
     has_spell = False
 
-gdk.threads_init ()
+gtk.gdk.threads_init ()
 
 import sys
 import re
@@ -501,7 +508,7 @@ class Page (ReportbugConnector):
         self.assistant.insert_page (self.widget, self.page_num)
         self.set_page_complete (self.default_complete)
         self.set_page_type (self.page_type)
-        self.assistant.set_page_side_image (self.widget, gdk.pixbuf_new_from_file (self.side_image))
+        self.assistant.set_page_side_image (self.widget, gtk.gdk.pixbuf_new_from_file (self.side_image))
         self.assistant.set_next_page (self)
         self.set_page_title ("Reportbug")
 
