@@ -12,8 +12,10 @@ reportbug (4.1) UNRELEASED; urgency=low
     - fix default when choosing for realname and email at configuration time
     - offer interface configuration on explicit configuration or when no
       interface is being specified
+  * reportbug/ui/gtk2_ui.py:
+    - display an information dialog if python-vte is not available
 
- -- Luca Bruno <lethalman88@gmail.com>  Wed, 25 Mar 2009 21:28:19 +0100
+ -- Luca Bruno <lethalman88@gmail.com>  Wed, 25 Mar 2009 22:05:09 +0100
 
 reportbug (4.0) unstable; urgency=low
 
